--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,51 @@
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.zip
+*.vi
+*~
+*.sass-cache
+*.seed
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+
+# OS or Editor folders
 .DS_Store
+._*
 Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+.esproj
+nbproject
+.sublime-project
+.sublime-workspace
+
+# Folders to ignore
+.hg
+.svn
+.CVS
+.idea
+.ssh
+.grunt
+node_modules
+bower
+dist
+lib-cov
+lcov.info
+pids
+logs
+results
+build
+src
+docs
